tests/ui/invalid-impls/invalid-impls.nightly.stderr
warning: `FromBytes` is ambiguous
  --> $DIR/invalid-impls/invalid-impls.rs:21:10
   |
21 | #[derive(FromBytes, IntoBytes, Unaligned)]
   |          ^^^^^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `FromBytes` could refer to the derive macro imported here
  --> $DIR/invalid-impls/invalid-impls.rs:16:5
   |
16 | use zerocopy::*;
   |     ^^^^^^^^^^^
   = help: consider adding an explicit import of `FromBytes` to disambiguate
note: `FromBytes` could also refer to the derive macro imported here
  --> $DIR/invalid-impls/invalid-impls.rs:17:5
   |
17 | use zerocopy_derive::*;
   |     ^^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `FromBytes` to disambiguate
   = note: `#[warn(ambiguous_glob_imports)]` (part of `#[warn(future_incompatible)]`) on by default

warning: `IntoBytes` is ambiguous
  --> $DIR/invalid-impls/invalid-impls.rs:21:21
   |
21 | #[derive(FromBytes, IntoBytes, Unaligned)]
   |                     ^^^^^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `IntoBytes` could refer to the derive macro imported here
  --> $DIR/invalid-impls/invalid-impls.rs:16:5
   |
16 | use zerocopy::*;
   |     ^^^^^^^^^^^
   = help: consider adding an explicit import of `IntoBytes` to disambiguate
note: `IntoBytes` could also refer to the derive macro imported here
  --> $DIR/invalid-impls/invalid-impls.rs:17:5
   |
17 | use zerocopy_derive::*;
   |     ^^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `IntoBytes` to disambiguate

warning: `Unaligned` is ambiguous
  --> $DIR/invalid-impls/invalid-impls.rs:21:32
   |
21 | #[derive(FromBytes, IntoBytes, Unaligned)]
   |                                ^^^^^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `Unaligned` could refer to the derive macro imported here
  --> $DIR/invalid-impls/invalid-impls.rs:16:5
   |
16 | use zerocopy::*;
   |     ^^^^^^^^^^^
   = help: consider adding an explicit import of `Unaligned` to disambiguate
note: `Unaligned` could also refer to the derive macro imported here
  --> $DIR/invalid-impls/invalid-impls.rs:17:5
   |
17 | use zerocopy_derive::*;
   |     ^^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `Unaligned` to disambiguate

error[E0277]: the trait bound `T: zerocopy::TryFromBytes` is not satisfied
   --> $DIR/invalid-impls/invalid-impls.rs:26:43
    |
 26 |     impl_or_verify!(T => TryFromBytes for Foo<T>);
    |                                           ^^^^^^ the trait `zerocopy::TryFromBytes` is not implemented for `T`
    |
    = note: Consider adding `#[derive(TryFromBytes)]` to `T`
note: required for `Foo<T>` to implement `zerocopy::TryFromBytes`
   --> $DIR/invalid-impls/invalid-impls.rs:21:10
    |
 21 | #[derive(FromBytes, IntoBytes, Unaligned)]
    |          ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::Subtrait`
   --> $DIR/invalid-impls/../../../src/util/macros.rs:413:29
    |
413 |             trait Subtrait: $trait {}
    |                             ^^^^^^ required by this bound in `Subtrait`
    |
   ::: $DIR/invalid-impls/invalid-impls.rs:26:5
    |
 26 |     impl_or_verify!(T => TryFromBytes for Foo<T>);
    |     --------------------------------------------- in this macro invocation
    = note: this error originates in the derive macro `FromBytes` which comes from the expansion of the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `TryFromBytes`
    |
 26 |     impl_or_verify!(T: zerocopy::TryFromBytes => TryFromBytes for Foo<T>);
    |                      ++++++++++++++++++++++++

error[E0277]: the trait bound `T: zerocopy::FromZeros` is not satisfied
   --> $DIR/invalid-impls/invalid-impls.rs:27:40
    |
 27 |     impl_or_verify!(T => FromZeros for Foo<T>);
    |                                        ^^^^^^ the trait `zerocopy::FromZeros` is not implemented for `T`
    |
    = note: Consider adding `#[derive(FromZeros)]` to `T`
note: required for `Foo<T>` to implement `zerocopy::FromZeros`
   --> $DIR/invalid-impls/invalid-impls.rs:21:10
    |
 21 | #[derive(FromBytes, IntoBytes, Unaligned)]
    |          ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::Subtrait`
   --> $DIR/invalid-impls/../../../src/util/macros.rs:413:29
    |
413 |             trait Subtrait: $trait {}
    |                             ^^^^^^ required by this bound in `Subtrait`
    |
   ::: $DIR/invalid-impls/invalid-impls.rs:27:5
    |
 27 |     impl_or_verify!(T => FromZeros for Foo<T>);
    |     ------------------------------------------ in this macro invocation
    = note: this error originates in the derive macro `FromBytes` which comes from the expansion of the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `FromZeros`
    |
 27 |     impl_or_verify!(T: zerocopy::FromZeros => FromZeros for Foo<T>);
    |                      +++++++++++++++++++++

error[E0277]: the trait bound `T: zerocopy::FromBytes` is not satisfied
   --> $DIR/invalid-impls/invalid-impls.rs:28:40
    |
 28 |     impl_or_verify!(T => FromBytes for Foo<T>);
    |                                        ^^^^^^ the trait `zerocopy::FromBytes` is not implemented for `T`
    |
    = note: Consider adding `#[derive(FromBytes)]` to `T`
note: required for `Foo<T>` to implement `zerocopy::FromBytes`
   --> $DIR/invalid-impls/invalid-impls.rs:21:10
    |
 21 | #[derive(FromBytes, IntoBytes, Unaligned)]
    |          ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::Subtrait`
   --> $DIR/invalid-impls/../../../src/util/macros.rs:413:29
    |
413 |             trait Subtrait: $trait {}
    |                             ^^^^^^ required by this bound in `Subtrait`
    |
   ::: $DIR/invalid-impls/invalid-impls.rs:28:5
    |
 28 |     impl_or_verify!(T => FromBytes for Foo<T>);
    |     ------------------------------------------ in this macro invocation
    = note: this error originates in the derive macro `FromBytes` which comes from the expansion of the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `FromBytes`
    |
 28 |     impl_or_verify!(T: zerocopy::FromBytes => FromBytes for Foo<T>);
    |                      +++++++++++++++++++++

error[E0277]: the trait bound `T: zerocopy::IntoBytes` is not satisfied
   --> $DIR/invalid-impls/invalid-impls.rs:29:40
    |
 29 |     impl_or_verify!(T => IntoBytes for Foo<T>);
    |                                        ^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `T`
    |
    = note: Consider adding `#[derive(IntoBytes)]` to `T`
note: required for `Foo<T>` to implement `zerocopy::IntoBytes`
   --> $DIR/invalid-impls/invalid-impls.rs:21:21
    |
 21 | #[derive(FromBytes, IntoBytes, Unaligned)]
    |                     ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::Subtrait`
   --> $DIR/invalid-impls/../../../src/util/macros.rs:413:29
    |
413 |             trait Subtrait: $trait {}
    |                             ^^^^^^ required by this bound in `Subtrait`
    |
   ::: $DIR/invalid-impls/invalid-impls.rs:29:5
    |
 29 |     impl_or_verify!(T => IntoBytes for Foo<T>);
    |     ------------------------------------------ in this macro invocation
    = note: this error originates in the derive macro `IntoBytes` which comes from the expansion of the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `IntoBytes`
    |
 29 |     impl_or_verify!(T: zerocopy::IntoBytes => IntoBytes for Foo<T>);
    |                      +++++++++++++++++++++

error[E0277]: the trait bound `T: zerocopy::Unaligned` is not satisfied
   --> $DIR/invalid-impls/invalid-impls.rs:30:40
    |
 30 |     impl_or_verify!(T => Unaligned for Foo<T>);
    |                                        ^^^^^^ the trait `zerocopy::Unaligned` is not implemented for `T`
    |
    = note: Consider adding `#[derive(Unaligned)]` to `T`
note: required for `Foo<T>` to implement `zerocopy::Unaligned`
   --> $DIR/invalid-impls/invalid-impls.rs:21:32
    |
 21 | #[derive(FromBytes, IntoBytes, Unaligned)]
    |                                ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::Subtrait`
   --> $DIR/invalid-impls/../../../src/util/macros.rs:413:29
    |
413 |             trait Subtrait: $trait {}
    |                             ^^^^^^ required by this bound in `Subtrait`
    |
   ::: $DIR/invalid-impls/invalid-impls.rs:30:5
    |
 30 |     impl_or_verify!(T => Unaligned for Foo<T>);
    |     ------------------------------------------ in this macro invocation
    = note: this error originates in the derive macro `Unaligned` which comes from the expansion of the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `Unaligned`
    |
 30 |     impl_or_verify!(T: zerocopy::Unaligned => Unaligned for Foo<T>);
    |                      +++++++++++++++++++++

error: aborting due to 5 previous errors; 3 warnings emitted

For more information about this error, try `rustc --explain E0277`.
